--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -3,53 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/base.css" />
-    <title>Base</title>
+    <link rel="stylesheet" href="{{.Base.StaticPath}}/css/base.css" />
+    <title>{{.Base.Title}}</title>
 </head>
 <body>
 <header class="header">
-    <div class="header-line">
-        <img class="img" src="static/img/header-logo-1.png" />
+    <div class="main">
+        <img class="logo" src="{{.Base.StaticPath}}/img/header-logo-1.png" />
         <div class="header-nav">
-            <div class="text-wrapper">LATEST UPDATES</div>
-            <div class="text-wrapper">POPULAR</div>
-            <div class="text-wrapper">CATEGORIES</div>
+            <div class="category-link">LATEST UPDATES</div>
+            <div class="category-link">POPULAR</div>
+            <div class="category-link">CATEGORIES</div>
         </div>
         <div class="header-search-bar">
-            <div class="filter-search-bar"><div class="div">Filter</div></div>
-            <img class="icon-search" src="static/img/icon-search-1.png" />
+            <div class="filter-search-bar"><div class="filter-search-text">Filter</div></div>
+            <img class="icon-search" src="{{.Base.StaticPath}}/img/icon-search-1.png" />
         </div>
     </div>
-    <div class="header-line-2">
+    <div class="variable">
         <div class="header-buttons">
-            <div class="login-btn"><div class="text-wrapper-2">Sign in</div></div>
-            <button class="register-btn"><div class="text-wrapper-2">Register</div></button>
+            <div class="login-btn"><div class="footer-nav-text">Sign in</div></div>
+            <div class="register-btn"><div class="footer-nav-text">Register</div></div>
         </div>
         <div class="header-msg">
-            <img class="line" src="static/img/line-1-1.svg" />
-            <p class="p">Sign in to have all features available</p>
-            <img class="line-2" src="static/img/line-2-1.svg" />
+            <img class="line-top" src="{{.Base.StaticPath}}/img/line-1-1.svg" />
+            <p class="invitation-msg">Sign in to have all features available</p>
+            <img class="line-bottom" src="{{.Base.StaticPath}}/img/line-2-1.svg" />
         </div>
     </div>
 </header>
 
-<div class="template"></div>
+<div class="template">{{template "principal" .}}</div>
 
 <footer class="footer">
     <div class="footer-nav-credits">
-        <img class="img" src="static/img/header-logo-1.png" />
+        <img class="logo" src="{{.Base.StaticPath}}/img/header-logo-1.png" />
         <div class="footer-nav">
-            <div class="text-wrapper-9">ABOUT</div>
-            <div class="terms-and-conditions">TERMS AND CONDITIONS</div>
-            <div class="text-wrapper-9">SITEMAP</div>
+            <div class="footer-nav-text">ABOUT</div>
+            <div class="footer-nav-text">TERMS AND CONDITIONS</div>
+            <div class="footer-nav-text">SITEMAP</div>
         </div>
-        <p class="mangathorg-com-is-a">
+        <p class="credits">
             MangaThorg.com is a Free website based on MangaDex API.<br />No manga content is stored on our server, but
-            comes from MangaDex.
+            comes from <a href="https://mangadex.org">MangaDex</a>.
         </p>
-        <div class="text-wrapper-10">© MangaThorg.com</div>
+        <div class="copyright">© MangaThorg.adebarbarin.com</div>
     </div>
-    <div class="footer-img-reading"></div>
+    <div class="footer-img-reading" style="background-image: url('{{.Base.StaticPath}}/img/footer-img-reading-girl-1.png')"></div>
 </footer>
 
 </body>
