--- a/templates/mail.gohtml
+++ b/templates/mail.gohtml
@@ -3,7 +3,8 @@
 <body>
     <div><span>Hello </span><span>{{.Username}}!</span></div><br/><br/>
     <div><span>Please follow the link to finish setting your newly created account:</span></div>
-    <div><a href="http://localhost:8080/confirm?id="{{.ConfirmID}}>Confirm your email</a></div><br/>
+    <div><a href="http://localhost:8080/confirm?id={{.ConfirmID}}">Confirm your email</a></div><br/>
+    <div><p>If you didn't initiate this process, don't click on the link, and your unverified account will be deleted tomorrow at noon (Paris timezone)</p></div>
     <footer>
         <div>
             <p>Welcome to the MangaThorg team.</p>
