--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -10,7 +10,7 @@
 <a href="/">Index page</a>
 <form action="/" method="post"><button>Login</button></form>
 <form action="/add" method="post"><button>Add (require login)</button></form>
-<p>{{.}}</p>
+<div>{{.}}</div>
 </body>
 </html>
 {{end}}
