--- a/templates/mail.gohtml
+++ b/templates/mail.gohtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <body>
     <div><span>Hello </span><span>{{.Username}}!</span></div><br/><br/>
     <div><span>Please follow the link to finish setting your newly created account:</span></div>
