--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,6 +2,10 @@
 @font-face {
   font-family: "Tilt Neon", sans-serif;
 }
+body {
+  background-color: #222831;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -30,7 +34,7 @@
   height: 44px;
   align-items: center;
   justify-content: center;
-  gap: 40px 0px;
+  gap: 40px 0;
   padding: 7px 10px;
   position: relative;
   flex: 0 0 auto;
@@ -41,7 +45,7 @@
   margin-top: -2px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
-  color: var(--collection-1-text-to-hover);
+  color: #00ADB5;
   font-size: 25px;
   text-align: center;
   letter-spacing: 0;
@@ -56,7 +60,7 @@
   position: relative;
   flex: 0 0 auto;
   border-radius: 15px;
-  border: 3px solid #eeeeee;
+  border: 3px solid #EEEEEE;
 }
 .header .main .header-search-bar .filter-search-bar {
   display: inline-flex;
@@ -67,7 +71,7 @@
   padding: 10px;
   position: relative;
   flex: 0 0 auto;
-  background-color: #393e46;
+  background-color: #393E46;
   border-radius: 8px;
 }
 .header .main .header-search-bar .filter-search-bar .filter-search-text {
@@ -77,7 +81,7 @@
   margin-bottom: -6px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
-  color: #eeeeee;
+  color: #EEEEEE;
   font-size: 18px;
   text-align: center;
   letter-spacing: 0;
@@ -115,7 +119,7 @@
   position: relative;
   align-self: stretch;
   flex: 0 0 auto;
-  background-color: #00adb5;
+  background-color: #00ADB5;
   border-radius: 12px;
 }
 .header .variable .header-buttons .register-btn {
@@ -129,7 +133,7 @@
   position: relative;
   align-self: stretch;
   flex: 0 0 auto;
-  background-color: #393e46;
+  background-color: #393E46;
   border-radius: 12px;
 }
 .header .variable .header-buttons .footer-nav-text {
@@ -139,7 +143,7 @@
   margin-bottom: -3px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
-  color: #eeeeee;
+  color: #EEEEEE;
   font-size: 18px;
   text-align: center;
   letter-spacing: 0;
@@ -166,7 +170,7 @@
   width: fit-content;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
-  color: #00adb5;
+  color: #00ADB5;
   font-size: 18px;
   text-align: center;
   letter-spacing: 0;
@@ -182,7 +186,11 @@
 .template {
   display: flex;
   flex-direction: column;
+  min-height: 1024px;
   align-items: center;
+  gap: 50px;
+  position: relative;
+  background-color: #222831;
 }
 
 .footer {
@@ -216,7 +224,7 @@
   margin-top: -1px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
-  color: #eeeeee;
+  color: #EEEEEE;
   font-size: 18px;
   text-align: center;
   letter-spacing: 0;
@@ -227,7 +235,7 @@
   width: 630px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
-  color: #ffffff;
+  color: #EEEEEE;
   font-size: 16px;
   text-align: center;
   letter-spacing: 0;
@@ -239,7 +247,7 @@
   height: 20px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
-  color: #ffffff;
+  color: #EEEEEE;
   font-size: 16px;
   text-align: center;
   letter-spacing: 0;
