--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -3,6 +3,14 @@
 @font-face {
   font-family: 'Tilt Neon', sans-serif;
 }
+$font-color: #EEEEEE;
+$background: #222831;
+$foreground: #393E46;
+$blue-elem: #00ADB5;
+
+body {
+  background-color: $background;
+}
 
 .header {
   display: flex;
@@ -32,7 +40,7 @@
       height: 44px;
       align-items: center;
       justify-content: center;
-      gap: 40px 0px;
+      gap: 40px 0;
       padding: 7px 10px;
       position: relative;
       flex: 0 0 auto;
@@ -43,7 +51,7 @@
         margin-top: -2px;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
-        color: var(--collection-1-text-to-hover);
+        color: $blue-elem;
         font-size: 25px;
         text-align: center;
         letter-spacing: 0;
@@ -60,7 +68,7 @@
       position: relative;
       flex: 0 0 auto;
       border-radius: 15px;
-      border: 3px solid #eeeeee;
+      border: 3px solid $font-color;
 
       .filter-search-bar {
         display: inline-flex;
@@ -71,7 +79,7 @@
         padding: 10px;
         position: relative;
         flex: 0 0 auto;
-        background-color: #393e46;
+        background-color: $foreground;
         border-radius: 8px;
 
         .filter-search-text {
@@ -81,7 +89,7 @@
           margin-bottom: -6px;
           font-family: "Tilt Neon", sans-serif;
           font-weight: 400;
-          color: #eeeeee;
+          color: $font-color;
           font-size: 18px;
           text-align: center;
           letter-spacing: 0;
@@ -124,7 +132,7 @@
         position: relative;
         align-self: stretch;
         flex: 0 0 auto;
-        background-color: #00adb5;
+        background-color: $blue-elem;
         border-radius: 12px;
       }
 
@@ -139,7 +147,7 @@
         position: relative;
         align-self: stretch;
         flex: 0 0 auto;
-        background-color: #393e46;
+        background-color: $foreground;
         border-radius: 12px;
       }
 
@@ -150,7 +158,7 @@
         margin-bottom: -3px;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
-        color: #eeeeee;
+        color: $font-color;
         font-size: 18px;
         text-align: center;
         letter-spacing: 0;
@@ -180,7 +188,7 @@
         width: fit-content;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
-        color: #00adb5;
+        color: $blue-elem;
         font-size: 18px;
         text-align: center;
         letter-spacing: 0;
@@ -201,7 +209,11 @@
 .template {
   display: flex;
   flex-direction: column;
+  min-height: 1024px;
   align-items: center;
+  gap: 50px;
+  position: relative;
+  background-color: $background;
 }
 
 .footer {
@@ -235,7 +247,7 @@
         margin-top: -1px;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
-        color: #eeeeee;
+        color: $font-color;
         font-size: 18px;
         text-align: center;
         letter-spacing: 0;
@@ -248,7 +260,7 @@
       width: 630px;
       font-family: "Tilt Neon", sans-serif;
       font-weight: 400;
-      color: #ffffff;
+      color: $font-color;
       font-size: 16px;
       text-align: center;
       letter-spacing: 0;
@@ -261,7 +273,7 @@
       height: 20px;
       font-family: "Tilt Neon", sans-serif;
       font-weight: 400;
-      color: #ffffff;
+      color: $font-color;
       font-size: 16px;
       text-align: center;
       letter-spacing: 0;
