--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -1,141 +1,78 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principal</title>
-    <link rel="stylesheet" href="static/css/globals.css" />
-    <link rel="stylesheet" href="static/css/styleguide.css" />
-    <link rel="stylesheet" href="static/css/style.css" />
-  </head>
-  <body>
+{{define "staticPath"}}static{{end}}
 
-      <div class="banner">
-        <img class="background-img" src="static/img/background-img-1.png" />
-        <div class="banner-text">
-          <div class="text-wrapper-3">Ending Maker</div>
-          <p class="text-wrapper-4">
-            There are two people who were obssessed with the game, Legend of Heroes 2, and spent thousands of hours on
-            it. The forever number one, Kang Jinho, and the forever number two, Hong Yoohee. One day, when they woke up,
-            they had been reincarnated into their characters within the game… “Hey… You too?” “Hey… Me too!” Legend of
-            Heroes 2’s ending is the end of the human world. However, since there are two of them instead of just one,
-            and not just any two, but the server’s rank one and rank two, things could be different. The journey of the
-            veteran gamers to accomplish the happy ending starts now!
-          </p>
-          <div class="tags">
-            <div class="banner-tag"><div class="text-wrapper-5">Action</div></div>
-            <div class="banner-tag"><div class="text-wrapper-5">Adventure</div></div>
-            <div class="banner-tag"><div class="text-wrapper-5">Comedy</div></div>
-            <div class="banner-tag"><div class="text-wrapper-5">Fantasy</div></div>
-            <div class="banner-tag"><div class="text-wrapper-5">Martial Arts</div></div>
-            <div class="banner-tag"><div class="text-wrapper-5">Romance</div></div>
-            <div class="banner-tag"><div class="text-wrapper-5">Shounen</div></div>
+{{define "title"}}MangaThorg - Principal{{end}}
+
+{{define "body"}}
+<div class="banner">
+  <img class="background-img" src="https://uploads.mangadex.org/covers/{{.Banner.Manga.Id}}/{{.Banner.Cover.Attributes.FileName}}" alt="{{.Banner.Manga.Attributes.Title.En}}" />
+  <div class="banner-text">
+    <div class="text-wrapper-3">Ending Maker</div>
+    <p class="text-wrapper-4">
+      {{.Banner.Manga.Attributes.Description.En}}
+    </p>
+    <div class="tags">
+      {{range .Banner.Manga.Attributes.Tags}}
+        <div class="banner-tag"><div class="text-wrapper-5">{{.Attributes.Name.En}}</div></div>
+      {{end}}
+    </div>
+    <div class="banner-buttons">
+      <a href="/chapter/{{.Banner.Manga.Attributes.LatestUploadedChapter}}"><div class="read-btn"><div class="text-wrapper-6">Read Now</div></div></a>
+      <a href="/manga/{{.Banner.Manga.Id}}"><div class="info-btn"><div class="text-wrapper-6">View Info</div></div></a>
+    </div>
+  </div>
+  <div class="banner-card"><img class="banner-cover" src="https://uploads.mangadex.org/covers/{{.Banner.Manga.Id}}/{{.Banner.Cover.Attributes.FileName}}" alt="{{.Banner.Manga.Attributes.Title.En}}" /></div>
+</div>
+<div class="latest-updates">
+  <div class="category-title"><div class="text-wrapper-7">Latest Uploaded</div></div>
+  <div class="category-list">
+    {{range .LatestUploaded}}
+      <div class="category-card">
+        <div class="category-card-cover">
+          <div class="category-card-img" style="background-image: url('https://uploads.mangadex.org/covers/{{.Manga.Id}}/{{.Cover.Attributes.FileName}}')"></div>
+          <div class="category-card-hover"></div>
+          <div class="hover-description">
+            <div class="description-title">
+              <p>Description</p>
+            </div>
+            {{.Manga.Attributes.Description.En}}
           </div>
-          <div class="banner-buttons">
-            <div class="read-btn"><div class="text-wrapper-6">Read Now</div></div>
-            <div class="info-btn"><div class="text-wrapper-6">View Info</div></div>
+          <div class="hover-tags">
+            {{range .Manga.Attributes.Tags}}
+              <a href="/category/{{.Id}}"><div class="hover-tag"><div class="tag-title">{{.Attributes.Name.En}}</div></div></a>
+            {{end}}
+          </div>
+          <div class="hover-buttons">
+            <a href="/chapter/{{.Manga.Attributes.LatestUploadedChapter}}"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/manga/{{.Manga.Id}}"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
-        <div class="banner-card"><img class="ending-maker-cover" src="static/img/ending-maker-cover-1.png" /></div>
+        <div class="category-card-info"><div class="text-wrapper-8">{{.Manga.Attributes.Title.En}}</div></div>
       </div>
-      <div class="latest-updates">
-        <div class="category-title"><div class="text-wrapper-7">Latest Updates</div></div>
-        <div class="category-list">
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Horimiya</div></div>
+    {{end}}
+  </div>
+</div>
+<div class="popular">
+  <div class="category-title"><div class="text-wrapper-7">Popular</div></div>
+  <div class="category-list">
+    {{range .Popular}}
+      <div class="category-card">
+        <div class="category-card-cover">
+          <div class="category-card-img" style="background-image: url('https://uploads.mangadex.org/covers/{{.Manga.Id}}/{{.Cover.Attributes.FileName}}')"></div>
+          <div class="category-card-hover"></div>
+          <div class="hover-description">{{.Manga.Attributes.Description.En}}</div>
+          <div class="hover-tags">
+            {{range .Manga.Attributes.Tags}}
+              <a href="/category/{{.Id}}"><div class="hover-tag"><div class="tag-title">{{.Attributes.Name.En}}</div></div></a>
+            {{end}}
           </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-2"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><p class="text-wrapper-8">I want to eat your pancreas</p></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-3"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Koe No Katachi</div></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-4"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Your Name</div></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-5"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Your lie in April</div></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-6"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Ending Maker</div></div>
+          <div class="hover-buttons">
+            <a href="/chapter/{{.Manga.Attributes.LatestUploadedChapter}}"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/manga/{{.Manga.Id}}"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
+        <div class="category-card-info"><div class="text-wrapper-8">{{.Manga.Attributes.Title.En}}</div></div>
       </div>
-      <div class="popular">
-        <div class="category-title"><div class="text-wrapper-7">Popular</div></div>
-        <div class="category-list">
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-7"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">The Great Ruler</div></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-8"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Martial Universe</div></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-9"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><p class="text-wrapper-8">Tales of Demons and Gods</p></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-10"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Yuan Zun</div></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-11"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info"><div class="text-wrapper-8">Nano Machine</div></div>
-          </div>
-          <div class="category-card">
-            <div class="category-card-cover">
-              <div class="category-card-img-12"></div>
-              <div class="category-card-hover"></div>
-            </div>
-            <div class="category-card-info">
-              <div class="tales-of-demons-and">The Legendary Moonlight Sculptor</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-  </body>
-</html>
+    {{end}}
+  </div>
+</div>
+{{end}}
