--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -24,8 +24,8 @@
     </div>
     <div class="variable">
         <div class="header-buttons">
-            <div class="login-btn"><div class="footer-nav-text">Sign in</div></div>
-            <div class="register-btn"><div class="footer-nav-text">Register</div></div>
+            <div class="login-btn"><div class="header-nav-text">Sign in</div></div>
+            <div class="register-btn"><div class="header-nav-text">Register</div></div>
         </div>
         <div class="header-msg">
             <img class="line-top" src="{{template "staticPath" .}}/img/line-1-1.svg" alt="line" />
@@ -35,15 +35,15 @@
     </div>
 </header>
 
-<div class="template">{{template "body" .}}</div>
+<div class="template">{{template "page" .}}</div>
 
 <footer class="footer">
     <div class="footer-nav-credits">
         <img class="logo" src="{{template "staticPath" .}}/img/header-logo-1.png" alt="logo" />
         <div class="footer-nav">
-            <div class="footer-nav-text">ABOUT</div>
-            <div class="footer-nav-text">TERMS AND CONDITIONS</div>
-            <div class="footer-nav-text">SITEMAP</div>
+            <div class="header-nav-text">ABOUT</div>
+            <div class="header-nav-text">TERMS AND CONDITIONS</div>
+            <div class="header-nav-text">SITEMAP</div>
         </div>
         <p class="credits">
             MangaThorg.com is a Free website based on MangaDex API.<br />No manga content is stored on our server, but
