--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -14,24 +14,18 @@ body {
 
 .header {
   display: flex;
+  width: 100%;
   flex-direction: column;
-  width: 1440px;
   align-items: center;
   justify-content: center;
   gap: 5px;
   padding: 10px 0;
-  position: relative;
-  flex: 0 0 auto;
-  background-color: transparent;
 
   .main {
     justify-content: space-between;
-    padding: 55px 55px 5px;
-    align-self: stretch;
     width: 100%;
     display: flex;
     align-items: center;
-    position: relative;
     flex: 0 0 auto;
 
     .header-nav {
@@ -40,15 +34,12 @@ body {
       height: 44px;
       align-items: center;
       justify-content: center;
-      gap: 40px 0;
+      gap: 3rem;
       padding: 7px 10px;
-      position: relative;
       flex: 0 0 auto;
 
       .category-link {
-        position: relative;
         width: fit-content;
-        margin-top: -2px;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
         color: $blue-elem;
@@ -65,28 +56,23 @@ body {
       justify-content: center;
       gap: 155px;
       padding: 5px 8px;
-      position: relative;
       flex: 0 0 auto;
       border-radius: 15px;
       border: 3px solid $font-color;
 
       .filter-search-bar {
         display: inline-flex;
-        height: 29px;
+        height: fit-content;
         align-items: center;
         justify-content: center;
         gap: 10px;
         padding: 10px;
-        position: relative;
         flex: 0 0 auto;
         background-color: $foreground;
         border-radius: 8px;
 
         .filter-search-text {
-          position: relative;
           width: fit-content;
-          margin-top: -8px;
-          margin-bottom: -6px;
           font-family: "Tilt Neon", sans-serif;
           font-weight: 400;
           color: $font-color;
@@ -94,11 +80,11 @@ body {
           text-align: center;
           letter-spacing: 0;
           line-height: normal;
+          padding: 2px 4px;
         }
       }
 
       .icon-search {
-        position: relative;
         width: 36.3px;
         height: 35px;
       }
@@ -106,56 +92,41 @@ body {
   }
 
   .variable {
-    width: 1440px;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px 55px;
+    width: calc(100% - 4rem);
     display: flex;
+    justify-content: center;
     align-items: center;
-    position: relative;
     flex: 0 0 auto;
+    gap: 10px;
+    padding: 10px 2rem;
 
     .header-buttons {
-      display: inline-flex;
       height: 35px;
-      gap: 25px;
-      flex: 0 0 auto;
+      display: flex;
       align-items: center;
-      position: relative;
+      flex: 0 0 auto;
+      gap: 25px;
 
-      .login-btn {
-        display: inline-flex;
+      .login-btn, .register-btn {
+        display: flex;
         align-items: center;
         justify-content: center;
+        flex: 0 0 auto;
         gap: 10px;
         padding: 10px 25px;
-        position: relative;
-        align-self: stretch;
-        flex: 0 0 auto;
-        background-color: $blue-elem;
         border-radius: 12px;
+      }
+
+      .login-btn {
+        background-color: $blue-elem;
       }
 
       .register-btn {
-        all: unset;
-        box-sizing: border-box;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        padding: 10px 25px;
-        position: relative;
-        align-self: stretch;
-        flex: 0 0 auto;
         background-color: $foreground;
-        border-radius: 12px;
       }
 
-      .footer-nav-text {
-        position: relative;
+      .header-nav-text {
         width: fit-content;
-        margin-top: -5px;
-        margin-bottom: -3px;
         font-family: "Tilt Neon", sans-serif;
         font-weight: 400;
         color: $font-color;
@@ -171,14 +142,13 @@ body {
       flex-direction: column;
       justify-content: center;
       gap: 10px;
-      padding: 0 270px 0 0;
+      padding: 0 12rem 0 0;
       flex: 1;
       align-items: center;
       position: relative;
 
       .line-top {
         width: 174px;
-        margin-top: -1px;
         position: relative;
         height: 2px;
       }
@@ -197,7 +167,6 @@ body {
 
       .line-bottom {
         width: 237px;
-        margin-bottom: -1px;
         position: relative;
         height: 2px;
       }
@@ -216,23 +185,23 @@ body {
   background-color: $background;
 }
 
+// footer
 .footer {
   display: flex;
-  width: 1440px;
+  width: 100%;
   height: 340px;
   align-items: flex-end;
-  gap: 10px;
-  position: relative;
+  gap: 3rem;
   background-color: transparent;
+  justify-content: center;
 
   .footer-nav-credits {
     display: flex;
     flex-direction: column;
-    width: 900px;
+    width: 37%;
     align-items: center;
     gap: 9px;
     padding: 20px 0;
-    position: relative;
 
     .footer-nav {
       display: inline-flex;
@@ -240,8 +209,7 @@ body {
       position: relative;
       flex: 0 0 auto;
 
-      .footer-nav-text {
-        position: relative;
+      .header-nav-text {
         width: 221px;
         height: 25px;
         margin-top: -1px;
@@ -256,7 +224,6 @@ body {
     }
 
     .credits {
-      position: relative;
       width: 630px;
       font-family: "Tilt Neon", sans-serif;
       font-weight: 400;
@@ -268,7 +235,6 @@ body {
     }
 
     .copyright {
-      position: relative;
       width: 528px;
       height: 20px;
       font-family: "Tilt Neon", sans-serif;
@@ -282,16 +248,15 @@ body {
   }
 
   .footer-img-reading {
-    position: relative;
-    flex: 1;
-    align-self: stretch;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: 50% 50%;
+    height: 100%;
+    width: 37%;
   }
 }
 
 .logo {
-  position: relative;
   width: 280px;
   height: 60px;
 }
