--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,24 +9,18 @@ body {
 
 .header {
   display: flex;
+  width: 100%;
   flex-direction: column;
-  width: 1440px;
   align-items: center;
   justify-content: center;
   gap: 5px;
   padding: 10px 0;
-  position: relative;
-  flex: 0 0 auto;
-  background-color: transparent;
 }
 .header .main {
   justify-content: space-between;
-  padding: 55px 55px 5px;
-  align-self: stretch;
   width: 100%;
   display: flex;
   align-items: center;
-  position: relative;
   flex: 0 0 auto;
 }
 .header .main .header-nav {
@@ -35,15 +29,12 @@ body {
   height: 44px;
   align-items: center;
   justify-content: center;
-  gap: 40px 0;
+  gap: 3rem;
   padding: 7px 10px;
-  position: relative;
   flex: 0 0 auto;
 }
 .header .main .header-nav .category-link {
-  position: relative;
   width: fit-content;
-  margin-top: -2px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #00ADB5;
@@ -58,28 +49,23 @@ body {
   justify-content: center;
   gap: 155px;
   padding: 5px 8px;
-  position: relative;
   flex: 0 0 auto;
   border-radius: 15px;
   border: 3px solid #EEEEEE;
 }
 .header .main .header-search-bar .filter-search-bar {
   display: inline-flex;
-  height: 29px;
+  height: fit-content;
   align-items: center;
   justify-content: center;
   gap: 10px;
   padding: 10px;
-  position: relative;
   flex: 0 0 auto;
   background-color: #393E46;
   border-radius: 8px;
 }
 .header .main .header-search-bar .filter-search-bar .filter-search-text {
-  position: relative;
   width: fit-content;
-  margin-top: -8px;
-  margin-bottom: -6px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
@@ -87,61 +73,45 @@ body {
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
+  padding: 2px 4px;
 }
 .header .main .header-search-bar .icon-search {
-  position: relative;
   width: 36.3px;
   height: 35px;
 }
 .header .variable {
-  width: 1440px;
-  justify-content: center;
-  gap: 10px;
-  padding: 10px 55px;
+  width: calc(100% - 4rem);
   display: flex;
+  justify-content: center;
   align-items: center;
-  position: relative;
   flex: 0 0 auto;
+  gap: 10px;
+  padding: 10px 2rem;
 }
 .header .variable .header-buttons {
-  display: inline-flex;
   height: 35px;
-  gap: 25px;
-  flex: 0 0 auto;
+  display: flex;
   align-items: center;
-  position: relative;
+  flex: 0 0 auto;
+  gap: 25px;
+}
+.header .variable .header-buttons .login-btn, .header .variable .header-buttons .register-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 auto;
+  gap: 10px;
+  padding: 10px 25px;
+  border-radius: 12px;
 }
 .header .variable .header-buttons .login-btn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 10px 25px;
-  position: relative;
-  align-self: stretch;
-  flex: 0 0 auto;
   background-color: #00ADB5;
-  border-radius: 12px;
 }
 .header .variable .header-buttons .register-btn {
-  all: unset;
-  box-sizing: border-box;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 10px 25px;
-  position: relative;
-  align-self: stretch;
-  flex: 0 0 auto;
   background-color: #393E46;
-  border-radius: 12px;
 }
-.header .variable .header-buttons .footer-nav-text {
-  position: relative;
+.header .variable .header-buttons .header-nav-text {
   width: fit-content;
-  margin-top: -5px;
-  margin-bottom: -3px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
@@ -155,14 +125,13 @@ body {
   flex-direction: column;
   justify-content: center;
   gap: 10px;
-  padding: 0 270px 0 0;
+  padding: 0 12rem 0 0;
   flex: 1;
   align-items: center;
   position: relative;
 }
 .header .variable .header-msg .line-top {
   width: 174px;
-  margin-top: -1px;
   position: relative;
   height: 2px;
 }
@@ -179,7 +148,6 @@ body {
 }
 .header .variable .header-msg .line-bottom {
   width: 237px;
-  margin-bottom: -1px;
   position: relative;
   height: 2px;
 }
@@ -196,21 +164,20 @@ body {
 
 .footer {
   display: flex;
-  width: 1440px;
+  width: 100%;
   height: 340px;
   align-items: flex-end;
-  gap: 10px;
-  position: relative;
+  gap: 3rem;
   background-color: transparent;
+  justify-content: center;
 }
 .footer .footer-nav-credits {
   display: flex;
   flex-direction: column;
-  width: 900px;
+  width: 37%;
   align-items: center;
   gap: 9px;
   padding: 20px 0;
-  position: relative;
 }
 .footer .footer-nav-credits .footer-nav {
   display: inline-flex;
@@ -218,8 +185,7 @@ body {
   position: relative;
   flex: 0 0 auto;
 }
-.footer .footer-nav-credits .footer-nav .footer-nav-text {
-  position: relative;
+.footer .footer-nav-credits .footer-nav .header-nav-text {
   width: 221px;
   height: 25px;
   margin-top: -1px;
@@ -232,7 +198,6 @@ body {
   line-height: normal;
 }
 .footer .footer-nav-credits .credits {
-  position: relative;
   width: 630px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
@@ -243,7 +208,6 @@ body {
   line-height: normal;
 }
 .footer .footer-nav-credits .copyright {
-  position: relative;
   width: 528px;
   height: 20px;
   font-family: "Tilt Neon", sans-serif;
@@ -255,15 +219,14 @@ body {
   line-height: normal;
 }
 .footer .footer-img-reading {
-  position: relative;
-  flex: 1;
-  align-self: stretch;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: 50% 50%;
+  height: 100%;
+  width: 37%;
 }
 
 .logo {
-  position: relative;
   width: 280px;
   height: 60px;
 }
@@ -277,62 +240,61 @@ a {
 }
 
 .banner {
-  display: flex;
-  width: 100%;
-  height: 400px;
-  gap: 250px;
   overflow: hidden;
-  align-items: center;
   position: relative;
+  display: flex;
+  height: 400px;
+  width: 100%;
+  min-height: fit-content;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .banner img.background-img {
   position: absolute;
   width: 100%;
-  height: 400px;
+  height: inherit;
   top: 0;
   left: 0;
   object-fit: cover;
-  filter: blur(12px) grayscale(20%) brightness(50%);
+  object-position: center;
+  filter: blur(8px) grayscale(20%) brightness(50%);
 }
 .banner .banner-text {
-  display: inline-flex;
-  width: 40%;
-  flex-direction: column;
-  justify-content: center;
-  gap: 25px;
-  padding: 30px;
+  display: flex;
   flex: 0 0 auto;
+  width: 60%;
+  max-height: 90%;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  position: relative;
+  gap: 1.5rem;
+  padding: 10px 20px;
 }
-.banner .banner-text .text-wrapper-3 {
+.banner .banner-text .banner-title {
   position: relative;
-  width: 500px;
-  height: 38px;
-  margin-top: -1px;
+  height: fit-content;
+  width: 85%;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
   font-size: 30px;
   text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
 }
-.banner .banner-text p.text-wrapper-4 {
+.banner .banner-text div.banner-description {
   position: relative;
-  width: 500px;
+  height: 60%;
+  overflow-y: scroll;
+  width: 85%;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
-  font-size: 13px;
+  font-size: 1rem;
   text-align: justify;
-  letter-spacing: 0;
-  line-height: normal;
 }
 .banner .banner-text .tags {
   display: flex;
-  width: 500px;
-  height: 30px;
+  width: 90%;
+  height: fit-content;
   align-items: center;
   gap: 5px 7px;
   position: relative;
@@ -341,19 +303,18 @@ a {
 .banner .banner-text .tags .banner-tag {
   display: flex;
   gap: 5px;
-  padding: 2px 6px;
+  padding: 3px 8px;
   flex: 0 0 auto;
   background-color: #393E46;
-  border-radius: 8px;
+  border-radius: 5px;
   align-items: center;
 }
-.banner .banner-text .tags .banner-tag .text-wrapper-5 {
+.banner .banner-text .tags .banner-tag .banner-tag-text {
   width: fit-content;
-  text-shadow: 0 0 12px rgba(0, 0, 0, 0.6980392157);
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
-  font-size: 11px;
+  font-size: 12px;
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
@@ -361,13 +322,13 @@ a {
 .banner .banner-text .banner-buttons {
   display: flex;
   width: 500px;
-  height: 50px;
+  height: fit-content;
   justify-content: center;
   gap: 30px;
   align-items: center;
   position: relative;
 }
-.banner .banner-text .banner-buttons a .read-btn {
+.banner .banner-text .banner-buttons a .read-btn, .banner .banner-text .banner-buttons a .info-btn {
   display: flex;
   width: 125px;
   align-items: center;
@@ -376,24 +337,16 @@ a {
   padding: 10px;
   position: relative;
   align-self: stretch;
-  background-color: #00ADB5;
   border-radius: 10px;
   overflow: hidden;
 }
 .banner .banner-text .banner-buttons a .info-btn {
-  display: flex;
-  width: 125px;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 10px;
-  position: relative;
-  align-self: stretch;
   background-color: #222831;
-  border-radius: 10px;
-  overflow: hidden;
 }
-.banner .banner-text .banner-buttons .text-wrapper-6 {
+.banner .banner-text .banner-buttons a .read-btn {
+  background-color: #00ADB5;
+}
+.banner .banner-text .banner-buttons .banner-btn-text {
   position: relative;
   width: fit-content;
   font-family: "Tilt Neon", sans-serif;
@@ -406,34 +359,31 @@ a {
 }
 .banner .banner-card {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 400px;
   height: 600px;
-  justify-content: center;
-  gap: 10px;
+  margin-top: 3%;
+  margin-right: 5%;
   padding: 15px;
-  background-color: #EEEEEE;
   border-radius: 15px;
   transform: rotate(12deg);
+  background-color: #EEEEEE;
   box-shadow: 0 12px 12px 7px rgba(0, 0, 0, 0.2509803922);
-  align-items: center;
-  position: relative;
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 .banner .banner-card img.banner-cover {
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   object-position: center;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .latest-updates, .popular {
   display: flex;
   flex-direction: column;
-  width: 1440px;
+  width: 100%;
   align-items: flex-start;
   gap: 10px;
-  padding: 5px 20px;
   position: relative;
   flex: 0 0 auto;
 }
@@ -446,10 +396,9 @@ a {
   display: flex;
   position: relative;
 }
-.latest-updates .category-title .text-wrapper-7, .popular .category-title .text-wrapper-7 {
+.latest-updates .category-title .category-title-text, .popular .category-title .category-title-text {
   position: relative;
   width: fit-content;
-  margin-top: -1px;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
   color: #EEEEEE;
@@ -459,51 +408,45 @@ a {
   line-height: normal;
 }
 .latest-updates .category-list, .popular .category-list {
-  align-items: flex-start;
-  justify-content: space-between;
-  padding: 5px 0;
-  align-self: stretch;
-  width: 100%;
-  flex: 0 0 auto;
   display: flex;
-  position: relative;
-  gap: 12px;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1.5rem;
+  padding: 0 1rem;
+  width: calc(100% - 2rem);
+  overflow-x: scroll;
 }
 .latest-updates .category-list .category-card, .popular .category-list .category-card {
+  display: flex;
   flex-direction: column;
-  width: 210px;
   align-items: center;
   gap: 10px;
-  display: flex;
-  position: relative;
+  width: fit-content;
 }
 .latest-updates .category-list .category-card .category-card-cover, .popular .category-list .category-card .category-card-cover {
+  position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   height: 288px;
   aspect-ratio: 12/16;
-  align-items: center;
-  justify-content: space-between;
   padding: 8px 10px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  background-color: #222831;
   border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 1px 2px 7px 5px rgba(0, 0, 0, 0.2509803922);
+  background-color: #EEEEEE;
+  box-shadow: 0 7px 7px 5px rgba(0, 0, 0, 0.2509803922);
 }
 .latest-updates .category-list .category-card .category-card-cover .category-card-img, .popular .category-list .category-card .category-card-cover .category-card-img {
   position: absolute;
-  width: 210px;
-  height: 288px;
+  height: 100%;
+  width: 100%;
   top: 0;
   left: 0;
   border-radius: 12px;
-  aspect-ratio: 12/16;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  transition: filter ease-in 200ms;
 }
 .latest-updates .category-list .category-card .category-card-cover .category-card-hover, .popular .category-list .category-card .category-card-cover .category-card-hover {
   display: none;
@@ -517,31 +460,110 @@ a {
 .latest-updates .category-list .category-card .category-card-cover .hover-buttons, .popular .category-list .category-card .category-card-cover .hover-buttons {
   display: none;
 }
+.latest-updates .category-list .category-card .category-card-cover:hover, .popular .category-list .category-card .category-card-cover:hover {
+  overflow: hidden;
+}
 .latest-updates .category-list .category-card .category-card-cover:hover .category-card-img, .popular .category-list .category-card .category-card-cover:hover .category-card-img {
-  filter: blur(12px) grayscale(20%);
+  filter: blur(8px) grayscale(20%) brightness(60%);
 }
 .latest-updates .category-list .category-card .category-card-cover:hover .category-card-hover, .popular .category-list .category-card .category-card-cover:hover .category-card-hover {
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 210px;
-  height: 28px;
+  width: 100%;
+  height: 34px;
+  border-radius: 12px 12px 0 0;
   top: 0;
   left: 0;
   background-color: #00ADB5;
 }
 .latest-updates .category-list .category-card .category-card-cover:hover .hover-description, .popular .category-list .category-card .category-card-cover:hover .hover-description {
   display: flex;
-  width: inherit;
+  flex-direction: column;
+  gap: 1.2rem;
+  width: 90%;
+  height: 60%;
   color: #EEEEEE;
-  font-size: 11px;
   z-index: 10;
+  font-family: "Tilt Neon", sans-serif;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-description .description-title, .popular .category-list .category-card .category-card-cover:hover .hover-description .description-title {
+  text-align: center;
+  font-size: 18px;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-description .description-ctn, .popular .category-list .category-card .category-card-cover:hover .hover-description .description-ctn {
+  text-align: justify;
+  font-size: 11px;
+  overflow-y: scroll;
+  overflow-wrap: anywhere;
 }
 .latest-updates .category-list .category-card .category-card-cover:hover .hover-tags, .popular .category-list .category-card .category-card-cover:hover .hover-tags {
+  z-index: 10;
   display: flex;
+  width: 90%;
+  height: 22%;
+  align-items: center;
+  justify-content: center;
+  gap: 2px 4px;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-tags a, .popular .category-list .category-card .category-card-cover:hover .hover-tags a {
+  margin: 0;
+  padding: 0;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-tags a .hover-tag, .popular .category-list .category-card .category-card-cover:hover .hover-tags a .hover-tag {
+  display: flex;
+  gap: 5px;
+  padding: 2px 4px;
+  flex: 0 0 auto;
+  background-color: #393E46;
+  border-radius: 4px;
+  align-items: center;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-tags a .hover-tag .hover-tag-text, .popular .category-list .category-card .category-card-cover:hover .hover-tags a .hover-tag .hover-tag-text {
+  width: fit-content;
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  color: #EEEEEE;
+  font-size: 11px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
 }
 .latest-updates .category-list .category-card .category-card-cover:hover .hover-buttons, .popular .category-list .category-card .category-card-cover:hover .hover-buttons {
+  z-index: 10;
+  width: 100%;
+  height: 12%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 26px;
+  font-family: "Tilt Neon", sans-serif;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-buttons a, .popular .category-list .category-card .category-card-cover:hover .hover-buttons a {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+  border-radius: 6px;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-buttons a span.hover-btn-text, .popular .category-list .category-card .category-card-cover:hover .hover-buttons a span.hover-btn-text {
+  width: fit-content;
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  color: #EEEEEE;
+  font-size: 14px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-buttons .hover-btn-read, .popular .category-list .category-card .category-card-cover:hover .hover-buttons .hover-btn-read {
+  background-color: #00ADB5;
+}
+.latest-updates .category-list .category-card .category-card-cover:hover .hover-buttons .hover-btn-info, .popular .category-list .category-card .category-card-cover:hover .hover-buttons .hover-btn-info {
+  background-color: #222831;
 }
 .latest-updates .category-list .category-card .category-card-info, .popular .category-list .category-card .category-card-info {
   display: flex;
@@ -553,7 +575,7 @@ a {
   width: 100%;
   flex: 0 0 auto;
 }
-.latest-updates .category-list .category-card .category-card-info .text-wrapper-8, .popular .category-list .category-card .category-card-info .text-wrapper-8 {
+.latest-updates .category-list .category-card .category-card-info .category-card-title, .popular .category-list .category-card .category-card-info .category-card-title {
   position: relative;
   width: fit-content;
   margin-top: -1px;
